MD Settings: Privacy: Show dialog when changing do-not-track

BUG=691843
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2731403005
Cr-Commit-Position: refs/heads/master@{#457128}

Former-commit-id: aaaf9b612ae3aa0a8d148feecd950009d9433fe5