chrome/browser/resources/settings/privacy_page/compiled_resources2.gyp
@@ -18,6 +18,7 @@
         '<(DEPTH)/ui/webui/resources/js/compiled_resources2.gyp:i18n_behavior',
         '<(DEPTH)/ui/webui/resources/js/compiled_resources2.gyp:web_ui_listener_behavior',
         '../compiled_resources2.gyp:route',
+        '../controls/compiled_resources2.gyp:settings_toggle_button',
         '../settings_page/compiled_resources2.gyp:settings_animated_pages',
         '../settings_ui/compiled_resources2.gyp:settings_ui_types',
         '../site_settings/compiled_resources2.gyp:constants',
